--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-forceupdate": "^0.3.4",
+    "react-hook-form": "^7.22.2",
     "react-scripts": "4.0.3",
     "react-vanilla-tilt": "^1.0.0",
     "scroll-into-view-if-needed": "^2.2.28",
