--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vanilla-tilt": "^1.4.1",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://geovannyC.github.io/f1Front-End",
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
