--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "next",
+    "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
     "react-color": "^2.19.3",
-    "react-dom": "next",
+    "react-dom": "^17.0.2",
     "react-forceupdate": "^0.3.4",
     "react-hook-form": "^7.22.2",
     "react-scripts": "4.0.3",
