--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "caman": "^4.1.2",
+    "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-forceupdate": "^0.3.4",
     "react-hook-form": "^7.22.2",
+    "react-image-filter": "^0.1.2",
     "react-scripts": "4.0.3",
     "react-vanilla-tilt": "^1.0.0",
     "scroll-into-view-if-needed": "^2.2.28",
+    "tesseract.js": "^2.1.5",
     "use-force-update": "^1.0.7",
     "vanilla-tilt": "^1.4.1",
     "web-vitals": "^1.1.2"
